<resources>
    <string name="Http_postDoc_address">http://192.168.1.102:8080/index.php/admin/Upload/uploadFile</string>
    <string name="Http_postOrder_address">http://192.168.1.102:8080/index.php/admin/Receiveorderinfo/receiveOrder</string>
    <string name="Http_queryOrderStatus_address">http://192.168.1.102:8080/index.php/admin/Queryorderstatus/orderStatus</string>

    <string name="app_name">InPrint</string>
    <string name="App_Name">趣印</string>
    <string name="app_top_title">趣 印</string>
    <string name="app_top_more">更多选项</string>

    <string name="activity_main_user_img">用户头像</string>

    <string name="main_bottom_wendang">文档图标</string>
    <string name="main_bottom_order">订单图标</string>
    <string name="main_bottom_user">我的图标</string>
    <string name="main_bottom_tab1">文档</string>
    <string name="main_bottom_tab2">订单</string>
    <string name="main_bottom_tab3">我的</string>

    <string name="dialog_confirm_title">提示</string>
    <string name="dialog_confirm_content">这是一个测试内容</string>
    <string name="dialog_confirm_btn">确定</string>

    <string name="login_back_description">退出登入页面</string>
    <string name="login_picDescription">登入页面图标</string>
    <string name="login_hint_name">手机/邮箱/用户名</string>
    <string name="login_hint_pass">请输入密码</string>
    <string name="login_login">登入</string>
    <string name="login_bottom_msg">-------------- 其他方式登录 --------------</string>
    <string name="login_bottom_qq">QQ登入</string>
    <string name="login_bottom_wx">微信登入</string>
    <string name="login_phone_log">动态登入</string>
    <string name="login_loss_pass">忘记密码</string>
    <string name="login_register">注册</string>

    <string name="doc_item_img">文档类型识别图像</string>
    <string name="doc_item_title">学分认定</string>
    <string name="doc_item_where_qq">来自 QQ</string>
    <string name="doc_item_where_wx">来自 微信</string>
    <string name="doc_item_where_phone">来自 本设备</string>
    <string name="doc_item_add_doc">添加文档</string>

    <string name="dialog_doc_click_title">选择功能</string>
    <string name="dialog_doc_click_one">打印文档</string>
    <string name="dialog_doc_click_two">查看文档</string>

    <string name="dialog_add_doc_qq">QQ</string>
    <string name="dialog_add_doc_phone">本地</string>
    <string name="dialog_add_doc_wx">微信</string>
    <string name="dialog_add_doc">添加文档</string>

    <string name="dialog_loading_text">请稍后...</string>

    <string name="docList_update_error">更新文档列表广播接收器出现异常</string>

    <string name="print_iv_select">进行选择的back按钮图片</string>
    <string name="print_iv_icon">图标</string>
    <string name="print_iv_weizhi">位置选择标识图片</string>
    <string name="print_top_img">打印文档活动的顶部返回按钮</string>
    <string name="print_object_img">文档类型图标</string>
    <string name="print_number_add">增加文档数量</string>
    <string name="print_number_sub">减少文档数量</string>

    <string name="print_iv_zfb">支付宝支付</string>
    <string name="print_iv_weixin">微信支付</string>

    <string name="print_iv_gou">支付方式选择图片</string>

    <string name="print_top_title">订单确认</string>
    <string name="print_tv_address">未选择打印位置</string>
    <string name="print_tv_icon">上海戎遇智能科技(云打印)</string>
    <string name="print_tv_icon_end">智能存储</string>
    <string name="print_filename">文档名字</string>
    <string name="print_total_start">每页单价</string>
    <string name="print_total_univalence">￥0.2</string>
    <string name="print_total_page">文档页数</string>
    <string name="print_total_pages">5</string>
    <string name="print_totals_description">小计</string>
    <string name="print_totals_price">1.0</string>
    <string name="print_zhifu">支付方式</string>
    <string name="print_zhifu_two">在线支付</string>
    <string name="print_numbers">份数</string>
    <string name="print_number">1</string>
    <string name="print_all">合计</string>
    <string name="print_test_money">￥1.0</string>
    <string name="print_view">预览</string>
    <string name="print_cost">支付</string>

    <string name="print_tv_zfb">支付宝</string>
    <string name="print_tv_weixin">微信支付</string>

    <string name="location_top_title">附件打印点</string>

    <string name="location_item_img">地点选择图片</string>
    <string name="location_text">上海海洋大学xx小区</string>
    <string name="location_status_0">空闲</string>
    <string name="location_status_1">忙碌</string>

    <string name="order_item_img">文档类型图片</string>
    <string name="order_item_filename">SQL注入原理-万能密码注入.docx</string>
    <string name="order_item_time">2019-09-05 11:28</string>
    <string name="order_item_status">正在打印</string>
    <string name="order_item_info">文档份数</string>
    <string name="order_item_number">x1</string>
    <string name="order_item_cost_content">实付</string>
    <string name="order_item_cost">￥1.2</string>
    <string name="order_item_open">取件</string>

    <string name="order_fragment_no_order_img">没有订单</string>
    <string name="order_fragment_no_order_text">没有订单记录</string>

    <string name="main_top_0">趣印</string>
    <string name="main_top_1">订单</string>
    <string name="main_top_2">我的</string>

    <string name="user_fragment_img">用户头像</string>
    <string name="user_fragment_id">ID:21341251</string>
    <string name="user_fragment_balance_img">余额图标</string>
    <string name="user_fragment_balance">余额</string>
    <string name="user_fragment_back">进入或者返回图标</string>
    <string name="user_fragment_service">客服</string>
    <string name="user_fragment_service_img">客服图标</string>
    <string name="user_fragment_recharge_img">充值图标</string>
    <string name="user_fragment_recharge">充值</string>
    <string name="user_fragment_set_img">设置图标</string>
    <string name="user_fragment_set">设置</string>

    <string name="activity_order_top_back">返回图片</string>
    <string name="activity_order_top_text">订单信息</string>
    <string name="activity_order_doc_img">文档订单图片</string>
    <string name="activity_order_doc_name">文档名字</string>
    <string name="activity_order_page_first">文档页数</string>
    <string name="activity_order_page_end">x12</string>
    <string name="activity_order_sum_first">文档份数</string>
    <string name="activity_order_sum_end">x2</string>
    <string name="activity_order_time_first">下单时间</string>
    <string name="activity_order_time_end">12:23</string>
    <string name="activity_order_pay_first">支付方式</string>
    <string name="activity_order_pay_end">在线支付</string>
    <string name="activity_order_total">15.7</string>
    <string name="activity_order_total_first">实付 ￥</string>
    <string name="activity_order_deliver_head">取件信息</string>
    <string name="activity_order_location_first">打印地点</string>
    <string name="activity_order_location_end">上海电机大学教学楼</string>
    <string name="activity_order_method_first">取件方式</string>
    <string name="activity_order_method_end">用户自取</string>
    <string name="activity_order_number_first">柜门号</string>
    <string name="activity_order_number_end">未完成打印</string>
    <string name="activity_order_take_doc">取件</string>

    <string name="doc_view_title">标题</string>
    <string name="doc_view_back_img">返回按钮</string>

    <string name="common_top_img">返回按钮</string>
    <string name="common_top_center">余额</string>
    <string name="common_top_right">记录</string>

    <string name="activity_balance_image">余额标志</string>
    <string name="activity_balance_balance">我的余额</string>
    <string name="activity_balance_total">13.8</string>
    <string name="activity_balance_recharge">充值</string>

    <string name="activity_recharge_back_img">返回图标</string>
    <string name="activity_recharge_text">充值</string>
    <string name="activity_recharge_num">充值金额</string>
    <string name="activity_recharge_sign">人民币符号</string>
    <string name="activity_recharge_total"> </string>
    <string name="activity_recharge_pattern">充值方式</string>
    <string name="activity_recharge_select">选择项</string>
    <string name="activity_recharge_zfb">支付宝图标</string>
    <string name="activity_recharge_zfb_text">支付宝</string>
    <string name="activity_recharge_wx">微信图标</string>
    <string name="activity_recharge_wx_text">微信支付</string>
    <string name="activity_recharge_button_text">确认</string>

    <string name="activity_set_top_img">返回按钮</string>
    <string name="activity_set_top_title">设置</string>
    <string name="activity_set_head_img">用户头像</string>
    <string name="activity_set_head_text">头像</string>
    <string name="activity_set_name_text">昵称</string>
    <string name="activity_set_name">温子亦。</string>
    <string name="activity_set_id_text">趣号</string>
    <string name="activity_set_id">21341251</string>
    <string name="activity_set_phone_text">手机</string>
    <string name="activity_set_phone">12345678945</string>
    <string name="activity_set_update_text">检查更新</string>
    <string name="activity_set_notify_text">消息通知</string>
    <string name="activity_set_exit">退出登录</string>
    <string name="activity_set_enter">进入</string>

    <string name="activity_service_back">返回</string>
    <string name="activity_service_title">客服</string>
    <string name="activity_service_send">发送</string>
    <string name="activity_service_info">你好</string>
</resources>
