<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50dp">
    <LinearLayout
        android:id="@+id/ll_tab1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_tab1"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/main_bottom_wendang"
            android:src="@mipmap/wendang"/>
        <TextView
            android:id="@+id/tv_tab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/main_bottom_tab1"
            android:textColor="@color/app_icon_color"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_tab2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_tab2"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/main_bottom_order"
            android:src="@mipmap/order1"/>
        <TextView
            android:id="@+id/tv_tab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/main_bottom_tab2"
            android:textColor="@color/app_grey"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_tab3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_tab3"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/main_bottom_user"
            android:src="@mipmap/wode1"/>
        <TextView
            android:id="@+id/tv_tab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/main_bottom_tab3"
            android:textColor="@color/app_grey"/>
    </LinearLayout>
</LinearLayout>