<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_doc_add">
    <TextView
        android:id="@+id/tv_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/dialog_title"
        android:text="@string/dialog_add_doc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/iv_doc_qq"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/doc_item_where_qq"
        android:src="@mipmap/qq"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/iv_doc_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_add"
        app:layout_constraintHorizontal_weight="1"/>
    <ImageView
        android:id="@+id/iv_doc_phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:contentDescription="@string/doc_item_where_phone"
        android:src="@mipmap/shouji"
        app:layout_constraintTop_toTopOf="@+id/iv_doc_qq"
        app:layout_constraintLeft_toRightOf="@+id/iv_doc_qq"
        app:layout_constraintRight_toLeftOf="@+id/iv_doc_wx"
        app:layout_constraintHorizontal_weight="1"/>
    <ImageView
        android:id="@+id/iv_doc_wx"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:contentDescription="@string/doc_item_where_wx"
        android:src="@mipmap/weixin"
        app:layout_constraintTop_toTopOf="@+id/iv_doc_phone"
        app:layout_constraintLeft_toRightOf="@+id/iv_doc_phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="1"/>
    <TextView
        android:id="@+id/tv_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_add_doc_qq"
        app:layout_constraintLeft_toLeftOf="@+id/iv_doc_qq"
        app:layout_constraintTop_toBottomOf="@+id/iv_doc_qq"
        app:layout_constraintRight_toRightOf="@+id/iv_doc_qq"/>
    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_add_doc_phone"
        app:layout_constraintTop_toBottomOf="@+id/iv_doc_phone"
        app:layout_constraintLeft_toLeftOf="@+id/iv_doc_phone"
        app:layout_constraintRight_toRightOf="@+id/iv_doc_phone"/>
    <TextView
        android:id="@+id/tv_wx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_add_doc_wx"
        app:layout_constraintTop_toBottomOf="@+id/iv_doc_wx"
        app:layout_constraintLeft_toLeftOf="@+id/iv_doc_wx"
        app:layout_constraintRight_toRightOf="@+id/iv_doc_wx"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_wx"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>