<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:background="@color/white">
    <ImageView
        android:id="@+id/iv_order_item_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/order_item_img"
        android:src="@mipmap/orderimg"
        android:background="@color/order_item_img_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/tv_order_item_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:maxEms="10"
        android:singleLine="true"
        android:ellipsize="end"
        android:textSize="16sp"
        android:textColor="@color/my_black"
        android:text="@string/order_item_filename"
        app:layout_constraintTop_toTopOf="@+id/iv_order_item_img"
        app:layout_constraintLeft_toRightOf="@+id/iv_order_item_img"/>
    <TextView
        android:id="@+id/tv_order_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        android:text="@string/order_item_time"
        app:layout_constraintBottom_toBottomOf="@+id/iv_order_item_img"
        app:layout_constraintLeft_toRightOf="@+id/iv_order_item_img"/>
    <TextView
        android:id="@+id/tv_order_item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        android:text="@string/order_item_status"
        app:layout_constraintTop_toTopOf="@+id/tv_order_item_filename"
        app:layout_constraintRight_toRightOf="parent"/>
    <View
        android:id="@+id/v_order_item_split_line"
        android:layout_width="wrap_content"
        android:layout_height="0.5dip"
        android:layout_marginTop="3dp"
        android:layout_marginStart="10dp"
        android:background="@color/background_grey"
        app:layout_constraintLeft_toRightOf="@+id/iv_order_item_img"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_item_time"/>
    <TextView
        android:id="@+id/tv_order_item_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:text="@string/order_item_info"
        app:layout_constraintTop_toBottomOf="@+id/v_order_item_split_line"
        app:layout_constraintLeft_toLeftOf="@+id/tv_order_item_time"/>
    <TextView
        android:id="@+id/tv_order_item_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="@string/order_item_number"
        app:layout_constraintRight_toRightOf="@+id/tv_order_item_status"
        app:layout_constraintTop_toTopOf="@+id/tv_order_item_info"/>
    <TextView
        android:id="@+id/tv_order_item_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/my_black"
        android:text="@string/order_item_cost"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_item_number"
        app:layout_constraintRight_toRightOf="@+id/tv_order_item_number"/>
    <TextView
        android:id="@+id/tv_order_item_cost_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/order_item_cost_content"
        app:layout_constraintTop_toTopOf="@+id/tv_order_item_cost"
        app:layout_constraintRight_toLeftOf="@+id/tv_order_item_cost"/>
    <TextView
        android:id="@+id/tv_order_item_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/order_item_open"
        android:textSize="14sp"
        android:textColor="@color/order_item_open_color"
        android:text="@string/order_item_open"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_item_cost"
        app:layout_constraintRight_toRightOf="@+id/tv_order_item_cost"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_item_open"
        app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>