<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_doc_item_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="90dp"

    android:paddingTop="10dp"
    android:background="@drawable/doc_item_select">

    <ImageView
        android:id="@+id/iv_doc_item_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/doc_item_img"
        android:src="@mipmap/word"/>
    <TextView
        android:id="@+id/tv_add_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_centerVertical="true"
        android:textSize="16sp"
        android:text="@string/doc_item_add_doc"/>
    <LinearLayout
        android:layout_toEndOf="@id/iv_doc_item_img"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_doc_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:maxEms="10"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textColor="@color/doc_item_title_color"
            android:text="@string/doc_item_title"/>
        <TextView
            android:id="@+id/tv_doc_item_where"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:text="@string/doc_item_where_qq"/>
    </LinearLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_marginStart="70dp"
        android:layout_height="0.5dip"
        android:background="@color/view"/>
</RelativeLayout>