<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_common_top"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@android:color/transparent">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/common_top_img"
        android:src="@mipmap/fanhui"/>
    <TextView
        android:id="@+id/tv_content_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/iv_back"
        android:layout_toStartOf="@+id/tv_content_right"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:textColor="@color/my_black"
        android:text="@string/common_top_center"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/tv_content_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:textColor="@color/my_black"
        android:text="@string/common_top_right" />
</RelativeLayout>