<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@mipmap/bg"
    tools:context=".activity.BalanceActivity">
    <include layout="@layout/common_top"/>

    <ImageView
        android:id="@+id/iv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/activity_balance_image"
        android:src="@mipmap/yver"
        app:layout_constraintTop_toBottomOf="@+id/rl_common_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/activity_balance_balance"
        android:textColor="@color/my_black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/iv_balance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/activity_balance_total"
        android:textColor="@color/my_black"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_balance" />
    
    <Button
        android:id="@+id/b_recharge"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/activity_balance_recharge"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:text="@string/activity_balance_recharge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>