<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/login_picDescription"
            android:src="@mipmap/tubiao64" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/App_Name"
            android:textColor="#050000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_line_select"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:maxLength="21"
            android:hint="@string/login_hint_name"
            android:gravity="center"
            android:textCursorDrawable="@drawable/login_cursor"
            android:autofillHints="@string/login_hint_name"
            tools:targetApi="O" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_line_select"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:inputType="textPassword"
            android:maxLength="21"
            android:textCursorDrawable="@drawable/login_cursor"
            android:hint="@string/login_hint_pass"
            android:autofillHints="@string/login_hint_pass"
            tools:targetApi="O"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/login_button"/>
    <include layout="@layout/login_bottom"/>
</LinearLayout>