<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_doc">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/dialog_title"
        android:text="@string/dialog_doc_click_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <!--打印文档-->
    <TextView
        android:id="@+id/print_doc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        android:text="@string/dialog_doc_click_one"
        android:textColor="@color/dialog_new_black"
        android:background="@drawable/item_click"
        app:layout_constraintTop_toBottomOf="@+id/title" />
    <!--查看文档-->
    <TextView
        android:id="@+id/check_doc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        android:textColor="@color/dialog_new_black"
        android:text="@string/dialog_doc_click_two"
        android:background="@drawable/item_click"
        app:layout_constraintTop_toBottomOf="@+id/print_doc"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintTop_toBottomOf="@+id/check_doc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>